--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container">
     <h2>QR Code Generator</h2>
-    <input type="text" id="linkInput" placeholder="Enter your link">
+    <input type="url" id="linkInput" required placeholder="Enter your link">
     <div>
       <button onclick="generateQRCode()">Generate QR</button>
       <button id="downloadBtn" style="display:none;">Download PNG</button>
